# nxbrew-dl

./: .gitignore  CHANGES.rst  README.md  nxbrew_dl_gui.py  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: build.yaml  publish.yaml
docs/: conf.py  index.rst  installation.rst  intro.rst  reference_api.rst  usage.rst
nxbrew_dl/: __init__.py
nxbrew_dl/configs/: general.yml
nxbrew_dl/gui/: __init__.py  custom_widgets.py  gui_about.py  gui_nxbrew_dl.py  gui_utils.py  layout_about.py  layout_about.ui  layout_nxbrew_dl.py  layout_nxbrew_dl.ui
nxbrew_dl/nxbrew_dl/: __init__.py  html_tools.py  io_tools.py  nxbrew.py  regex_tools.py
nxbrew_dl/util/: __init__.py  download_tools.py  github_tools.py  html_tools.py  io_tools.py  regex_tools.py
