[project]

name = "nxbrew_dl"
version = "0.6"
description = "NXBrew Downloader"
readme = "README.md"
requires-python = ">=3.11"
license = {file = "LICENSE"}

authors = [
    {name = "bbtufty"},
]
maintainers = [
    {name = "bbtufty"},
]

classifiers = [
    #   3 - Alpha
    #   4 - Beta
    #   5 - Production/Stable
    "Development Status :: 3 - Alpha",

    # License
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",

    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
]

dependencies = [
    "beautifulsoup4 == 4.12.3",
    "colorlog == 6.9.0",
    "curl_cffi == 0.7.4",
    "discordwebhook == 1.0.3",
    "logredactor == 0.0.2",
    "lxml == 5.3.0",
    "myjdapi == 1.1.7",
    "numpy == 2.2.1",
    "pathvalidate == 3.2.3",
    "PySide6 == 6.8.1",
    "requests == 2.32.3",
    "PyYAML == 6.0.2",
]

[project.scripts]
nxbrew-dl = "nxbrew_dl:run_nxbrew_gui"

[project.optional-dependencies]
docs = [
    "sphinx == 8.1.3",
    "sphinx-automodapi == 0.18.0",
    "sphinx-rtd-theme == 3.0.2",
]

[project.urls]
"Homepage" = "https://github.com/bbtufty/nxbrew-dl"
"Bug Reports" = "https://github.com/bbtufty/nxbrew-dl/issues"
"Source" = "https://github.com/bbtufty/nxbrew-dl"

[tool.setuptools.packages.find]
exclude = ["log/*"]

[build-system]
requires = [
    "setuptools>=43.0.0",
    "wheel>=0.43.0",
    "setuptools_scm>=8.1.0",
]

build-backend = "setuptools.build_meta"